--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </h2>
         <div class="divider"></div>
         <h3>
-            <img id="van-picture" src="C:\Mine\Coding\Site Nicu\markus-winkler-3vlGNkDep4E-unsplash.jpg" alt="">
+            <img id="van-picture" src="markus-winkler-3vlGNkDep4E-unsplash.jpg" alt="">
         </h3>
         <h4>
             Aceasta este lista tarilor prin care vom trece:
