add s to luxemburg

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <option value="2">Ungaria</option>
                     <option value="3">Austria</option>
                     <option value="4">Germania</option>
-                    <option value="5">Luxemburg</option>
+                    <option value="5">Luxemburgs</option>
             <option value="6">Belgia</option>
             <option value="7">Nordul Frantei</option> 
                 </select>
