--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <main>
         <h6>
-            <button class="buttons" id="button1"><a href="tel:+4076223801">+4076223801</a></button> 
-            <button class="buttons" id="button2"><a href="tel:+33616307061">+33616307061</a></button>
+            <button class="buttons" id="button1"><a href="tel:+4076223801">Tel. Romania</a></button> 
+            <button class="buttons" id="button2"><a href="tel:+33616307061">Tel Romania</a></button>
         </h6>
         <h7>
             <button class="buttons" id="button3"><a href="https://www.facebook.com/profile.php?id=100054213471675" target="_blank">Pagina noastra de Facebook</a></button>
