--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="buttons" id="button2"><a href="tel:+33616307061">Tel. Franta</a></button>
         </h6>
         <h7>
-            <button class="buttons" id="button3"><a href="https://www.facebook.com/profile.php?id=100054213471675" target="_blank">Pagina noastra de Facebook</a></button>
+            <button class="buttons" id="button3"><a href="https://www.facebook.com/bucuresticurier" target="_blank">Pagina noastra de Facebook</a></button>
         </h7>
         <div class="divider"></div>
         <h1>
@@ -29,7 +29,7 @@
         </h2>
         <div class="divider"></div>
         <h3>
-            <img id="van-picture" src="markus-winkler-3vlGNkDep4E-unsplash.jpg" alt="">
+            <img id="van-picture" src="277512004_4716824285106803_8431629043820512284_n.jpg" alt="">
         </h3>
         <h4>
             Aceasta este lista tarilor prin care vom trece:
