--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="styles.css">
-    <title>Phoenix Soft Project</title>
+    <title></title>
 </head>
 <body>
 	<header>
@@ -42,7 +42,7 @@
                     <option value="2">Ungaria</option>
                     <option value="3">Austria</option>
                     <option value="4">Germania</option>
-                    <option value="5">Luxemburgs</option>
+                    <option value="5">Luxemburg</option>
             <option value="6">Belgia</option>
             <option value="7">Nordul Frantei</option> 
                 </select>
