--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 	<header>
     <div class="divider"></div>
-    Phoenix Soft Project
+    <!-- Phoenix Soft Project -->
+    <img src="" alt="Phoenix Soft Project">
     </header>
     <main>
         <h6>
