--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 	<header>
     <div class="divider"></div>
-    <!-- Phoenix Soft Project -->
-    <img src="" alt="Phoenix Soft Project">
+    <title>Phoenix Soft Project</title>
+    <!--<img src="" alt="Phoenix Soft Project"> -->
     </header>
     <main>
         <h6>
