--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
     <div class="divider"></div>
-    <title>Phoenix Soft Project</title>
+    Phoenix Soft Project
     <!--<img src="" alt="Phoenix Soft Project"> -->
     </header>
     <main>
