update title to show image (not sure if it works)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 	<header>
     <div class="divider"></div>
-    Phoenix Soft Project
-    <!--<img src="" alt="Phoenix Soft Project"> -->
+    <!-- Phoenix Soft Project -->
+    <img src="93fd76fa-456b-4194-a0a3-5c78235ea88f.jpg" alt="Phoenix Soft Project">
     </header>
     <main>
         <h6>
