change title picture 1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="divider"></div>
     <!-- Phoenix Soft Project -->
     <header width="device-width">
-    <img src="93fd76fa-456b-4194-a0a3-5c78235ea88f.jpg" class="title-img" alt="Phoenix Soft Project">
+    <img src="logo v2.jpg" class="title-img" alt="Phoenix Soft Project">
     </header>
     <main>
         <h6>
