Revert text title

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 	<header>
     <div class="divider"></div>
-    <!-- Phoenix Soft Project -->
+    Phoenix Soft Project
     <header width="device-width">
-    <img src="logo v2.jpg" class="title-img" alt="Phoenix Soft Project">
+    <!-- <img src="logo v2.jpg" class="title-img" alt="Phoenix Soft Project"> -->
     </header>
     <main>
         <h6>
